--- a/extra/web/yaccpp.pod
+++ b/extra/web/yaccpp.pod
@@ -1,171 +1,5 @@
-=head1 Make++
+=head1 Yacc Preprocessor
 
-Make++ is a make-inspired build system that compiles to GNU Autotools.
+The C<yaccpp> project is a preprocessor for YACC/Bison grammars.
 
-L<Git repository|http://xinutec.org/git/devel/makepp.git/>
-
-This is the future development of L<Autoproj|autoproj>. While Autoproj is a
-working piece of software, C<Make++> is nowhere, yet. At the moment, there are
-only ideas, but no code. The ideas are also very much in flux, so don't expect
-much stability.
-
-Here are some examples. Those marked with C<[#]> have comments, so you can
-understand a bit of what is going on.
-
-C<[#]> L<configure.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/configure.mq>
-
-C<[#]> L<include/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/include/Rules.mq>
-
-C<[#]> L<src/aldor/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/aldor/Rules.mq>
-
-L<src/compiler/general/bigint/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/bigint/Rules.mq>
-
-L<src/compiler/general/bitv/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/bitv/Rules.mq>
-
-L<src/compiler/general/buffer/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/buffer/Rules.mq>
-
-L<src/compiler/general/ccode/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/ccode/Rules.mq>
-
-L<src/compiler/general/cfgfile/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/cfgfile/Rules.mq>
-
-L<src/compiler/general/debug/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/debug/Rules.mq>
-
-L<src/compiler/general/dnf/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/dnf/Rules.mq>
-
-L<src/compiler/general/dword/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/dword/Rules.mq>
-
-L<src/compiler/general/file/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/file/Rules.mq>
-
-L<src/compiler/general/fluid/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/fluid/Rules.mq>
-
-L<src/compiler/general/foam_c/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/foam_c/Rules.mq>
-
-L<src/compiler/general/format/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/format/Rules.mq>
-
-L<src/compiler/general/ftype/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/ftype/Rules.mq>
-
-L<src/compiler/general/list/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/list/Rules.mq>
-
-L<src/compiler/general/logging/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/logging/Rules.mq>
-
-L<src/compiler/general/msg/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/msg/Rules.mq>
-
-L<src/compiler/general/path/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/path/Rules.mq>
-
-L<src/compiler/general/priq/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/priq/Rules.mq>
-
-L<src/compiler/general/sexpr/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/sexpr/Rules.mq>
-
-L<src/compiler/general/srcpos/io/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/srcpos/io/Rules.mq>
-
-L<src/compiler/general/srcpos/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/srcpos/Rules.mq>
-
-L<src/compiler/general/store/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/store/Rules.mq>
-
-L<src/compiler/general/strops/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/strops/Rules.mq>
-
-L<src/compiler/general/symbol/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/symbol/Rules.mq>
-
-L<src/compiler/general/table/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/table/Rules.mq>
-
-L<src/compiler/general/termtype/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/termtype/Rules.mq>
-
-L<src/compiler/general/textansi/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/textansi/Rules.mq>
-
-L<src/compiler/general/textcolour/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/textcolour/Rules.mq>
-
-L<src/compiler/general/texthp/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/texthp/Rules.mq>
-
-L<src/compiler/general/timer/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/timer/Rules.mq>
-
-L<src/compiler/general/util/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/util/Rules.mq>
-
-L<src/compiler/general/xfloat/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/general/xfloat/Rules.mq>
-
-L<src/compiler/phases/abcheck/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/abcheck/Rules.mq>
-
-L<src/compiler/phases/abuse/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/abuse/Rules.mq>
-
-L<src/compiler/phases/bloop/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/bloop/Rules.mq>
-
-L<src/compiler/phases/flatten/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/flatten/Rules.mq>
-
-L<src/compiler/phases/linear/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/linear/Rules.mq>
-
-L<src/compiler/phases/parse/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/parse/Rules.mq>
-
-L<src/compiler/phases/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/Rules.mq>
-
-L<src/compiler/phases/scan/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/scan/Rules.mq>
-
-L<src/compiler/phases/scobind/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/phases/scobind/Rules.mq>
-
-L<src/compiler/port/cport/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/port/cport/Rules.mq>
-
-L<src/compiler/port/opsys/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/port/opsys/Rules.mq>
-
-L<src/compiler/struct/absyn/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/absyn/Rules.mq>
-
-L<src/compiler/struct/axlobs/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/axlobs/Rules.mq>
-
-L<src/compiler/struct/depdag/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/depdag/Rules.mq>
-
-L<src/compiler/struct/doc/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/doc/Rules.mq>
-
-C<[#]> L<src/compiler/struct/fint/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/fint/Rules.mq>
-
-L<src/compiler/struct/foam/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/foam/Rules.mq>
-
-L<src/compiler/struct/lists/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/lists/Rules.mq>
-
-L<src/compiler/struct/output/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/output/Rules.mq>
-
-L<src/compiler/struct/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/Rules.mq>
-
-L<src/compiler/struct/spesym/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/spesym/Rules.mq>
-
-L<src/compiler/struct/srcline/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/srcline/Rules.mq>
-
-L<src/compiler/struct/syme/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/syme/Rules.mq>
-
-L<src/compiler/struct/token/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/struct/token/Rules.mq>
-
-L<src/compiler/toplevel/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/compiler/toplevel/Rules.mq>
-
-C<[#]> L<src/library/aldor/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/aldor/Rules.mq>
-
-L<src/library/aldorunit/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/aldorunit/Rules.mq>
-
-L<src/library/algebra/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/algebra/Rules.mq>
-
-L<src/library/axldem/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/axldem/Rules.mq>
-
-L<src/library/axllib/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/axllib/Rules.mq>
-
-L<src/library/charset/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/charset/Rules.mq>
-
-L<src/library/extio/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/extio/Rules.mq>
-
-C<[#]> L<src/library/foamlib/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/foamlib/Rules.mq>
-
-C<[#]> L<src/library/foam/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/foam/Rules.mq>
-
-L<src/library/model/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/model/Rules.mq>
-
-L<src/library/openmath/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/openmath/Rules.mq>
-
-C<[#]> L<src/library/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/Rules.mq>
-
-L<src/library/xmllib/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/library/xmllib/Rules.mq>
-
-C<[#]> L<src/runtime-gmp/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/runtime-gmp/Rules.mq>
-
-C<[#]> L<src/runtime/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/runtime/Rules.mq>
-
-C<[#]> L<src/tools/datagen/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/tools/datagen/Rules.mq>
-
-C<[#]> L<src/tools/msgcat/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/tools/msgcat/Rules.mq>
-
-C<[#]> L<src/tools/unicl/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/tools/unicl/Rules.mq>
-
-C<[#]> L<src/tools/zacc/Rules.mq|http://xinutec.org/git/devel/makepp.git/tree/extra/template/src/tools/zacc/Rules.mq>
+L<Git repository|http://xinutec.org/git/lang/yaccpp.git/>
